--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
           </svg>
           <span class="btn-text">New chat</span>
         </button>
+        <button class="search-btn-collapsed" id="searchBtnCollapsed" title="Search chats">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <circle cx="11" cy="11" r="8"/>
+            <path d="m21 21-4.35-4.35"/>
+          </svg>
+        </button>
         <div class="sidebar-search" id="sidebarSearch">
           <svg class="sidebar-search-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <circle cx="11" cy="11" r="8"/>
