feat: add Prism.js syntax highlighting for code blocks
- Add Prism.js via CDN (core + autoloader for on-demand languages)
- Use Tomorrow Night theme for consistent dark mode look
- Language detection with common aliases (js→javascript, py→python, etc.)
- Language label displayed in top-right of code blocks
- Light theme overrides for readability
- Highlighting triggered after message render

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ClawGPT</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Prism.js for syntax highlighting -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css">
 </head>
 <body>
   <div class="app">
@@ -278,6 +280,9 @@
     </div>
   </div>
 
+  <!-- Prism.js core + autoloader for syntax highlighting -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
