Add warning not to share QR code (contains token)

--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
             <div class="qr-code" id="qrCode" style="display:none;"></div>
           </div>
           <span class="setting-hint">Scan with your phone to open ClawGPT on mobile (same WiFi network)</span>
+          <span class="setting-hint warning">⚠️ Don't share this QR code — it contains your auth token</span>
           <div class="mobile-url" id="mobileUrl"></div>
         </div>
         <div class="settings-actions">
