--- a/index.html
+++ b/index.html
@@ -252,6 +252,30 @@
           <span class="setting-hint">Export saves all chats to a JSON file. Import merges chats from a file.</span>
         </div>
         <div class="settings-divider"></div>
+        <div class="settings-section-title">Cross-Device Memory</div>
+        <div class="form-group">
+          <div class="file-memory-status">
+            <span id="fileMemoryStatus"><span style="color: var(--text-muted);">Not configured</span></span>
+          </div>
+          <div class="button-group">
+            <button class="data-btn" id="enableFileMemoryBtn">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
+                <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"/>
+              </svg>
+              Select Folder
+            </button>
+            <button class="data-btn" id="syncFileMemoryBtn" style="display: none;">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
+                <polyline points="23 4 23 10 17 10"/>
+                <polyline points="1 20 1 14 7 14"/>
+                <path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"/>
+              </svg>
+              Sync Now
+            </button>
+          </div>
+          <span class="setting-hint">Save messages to a folder for cross-device access. Messages sync via relay and persist to disk.</span>
+        </div>
+        <div class="settings-divider"></div>
         <div class="settings-section-title">Mobile Access</div>
         <div class="form-group">
           <label class="relay-toggle-label">
