--- a/index.html
+++ b/index.html
@@ -296,6 +296,14 @@
               <path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"/>
             </svg>
           </button>
+          <button class="prompt-library-btn" id="promptLibraryBtn" title="Prompt Library">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
+              <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/>
+              <line x1="8" y1="7" x2="16" y2="7"/>
+              <line x1="8" y1="11" x2="14" y2="11"/>
+            </svg>
+          </button>
           <input type="file" id="fileInput" accept="image/*,.txt,.md,.json,.js,.ts,.py,.html,.css,.xml,.yaml,.yml,.csv,.log,.sh,.bash,.zsh,.env,.ini,.conf,.cfg,.pdf,.xlsx,.xls" multiple style="display: none;">
           <textarea 
             id="messageInput" 
@@ -506,6 +514,99 @@
         </div>
       </div>
     </aside>
+  </div>
+
+  <!-- Prompt Library Modal -->
+  <div class="modal" id="promptLibraryModal">
+    <div class="modal-content prompt-library-modal">
+      <div class="modal-header">
+        <h2>Prompt Library</h2>
+        <button class="close-btn" id="closePromptLibrary">&times;</button>
+      </div>
+      <div class="modal-body prompt-library-body">
+        <!-- List View -->
+        <div class="prompt-library-list-view" id="promptLibraryListView">
+          <div class="prompt-library-toolbar">
+            <div class="prompt-library-search-wrapper">
+              <svg class="prompt-library-search-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16">
+                <circle cx="11" cy="11" r="8"/>
+                <path d="m21 21-4.35-4.35"/>
+              </svg>
+              <input type="text" id="promptLibrarySearch" placeholder="Search prompts..." autocomplete="off">
+            </div>
+            <button class="prompt-library-new-btn" id="promptLibraryNewBtn">+ New Prompt</button>
+          </div>
+          <div class="prompt-library-filter">
+            <label>Category:</label>
+            <select id="promptLibraryCategoryFilter">
+              <option value="all">All</option>
+              <option value="General">General</option>
+              <option value="Coding">Coding</option>
+              <option value="Writing">Writing</option>
+              <option value="Analysis">Analysis</option>
+            </select>
+          </div>
+          <div class="prompt-library-cards" id="promptLibraryCards">
+            <!-- Prompt cards rendered by JS -->
+          </div>
+        </div>
+        <!-- Create/Edit View -->
+        <div class="prompt-library-form-view" id="promptLibraryFormView" style="display:none;">
+          <div class="prompt-library-form-header">
+            <button class="prompt-library-back-btn" id="promptLibraryBackBtn">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
+                <polyline points="15 18 9 12 15 6"/>
+              </svg>
+              Back
+            </button>
+            <span class="prompt-library-form-title" id="promptLibraryFormTitle">New Prompt</span>
+          </div>
+          <div class="prompt-library-form">
+            <div class="form-group">
+              <label for="promptFormTitle">Title</label>
+              <input type="text" id="promptFormTitle" placeholder="e.g., Code Review">
+            </div>
+            <div class="form-group">
+              <label for="promptFormCategory">Category</label>
+              <input type="text" id="promptFormCategory" list="promptCategoryList" placeholder="e.g., Coding">
+              <datalist id="promptCategoryList">
+                <option value="General">
+                <option value="Coding">
+                <option value="Writing">
+                <option value="Analysis">
+              </datalist>
+            </div>
+            <div class="form-group">
+              <label for="promptFormContent">Content</label>
+              <textarea id="promptFormContent" rows="8" placeholder="Enter your prompt template...&#10;&#10;Use {{variable}} for dynamic values&#10;e.g., Review this {{language}} code for bugs"></textarea>
+            </div>
+            <div class="prompt-library-form-actions">
+              <button class="cancel-btn" id="promptFormCancelBtn">Cancel</button>
+              <button class="save-btn" id="promptFormSaveBtn">Save Prompt</button>
+            </div>
+          </div>
+        </div>
+        <!-- Variable Substitution View -->
+        <div class="prompt-library-vars-view" id="promptLibraryVarsView" style="display:none;">
+          <div class="prompt-library-form-header">
+            <button class="prompt-library-back-btn" id="promptLibraryVarsBackBtn">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
+                <polyline points="15 18 9 12 15 6"/>
+              </svg>
+              Back
+            </button>
+            <span class="prompt-library-form-title" id="promptLibraryVarsTitle">Fill Variables</span>
+          </div>
+          <div class="prompt-library-vars-form" id="promptLibraryVarsForm">
+            <!-- Variable inputs rendered by JS -->
+          </div>
+          <div class="prompt-library-form-actions">
+            <button class="cancel-btn" id="promptVarsCancelBtn">Cancel</button>
+            <button class="save-btn" id="promptVarsInsertBtn">Insert Prompt</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- Toast Notification Container -->
